@@ -1,10 +1,0 @@
-#include "language_prompts.hpp"
-
-LanguagePrompts::LanguagePrompts()
-{
-}
-
-LanguagePrompts::~LanguagePrompts()
-{
-}
-
