@@ -1,26 +1,0 @@
-#ifndef LANGUAGE_PROMPTS_HPP
-#define LANGUAGE_PROMPTS_HPP
-
-/**
- * @class LanguagePrompts
- * @author Michael Griffin
- * @date 10/7/2015
- * @file language_prompts.hpp
- * @brief for read/write and editing of the prompts.dat language file.
- */
-class LanguagePrompts
-{
-public:
-    LanguagePrompts();
-    ~LanguagePrompts();
-
-    // Do we want to support multiple languages and/or themes?
-
-    // User needs a index of language propmt selection
-
-    //
-
-
-};
-
-#endif // LANGUAGE_PROMPTS_HPP
