@@ -31,8 +31,6 @@
     <File Name="src/common_io.hpp"/>
     <File Name="src/communicator.cpp"/>
     <File Name="src/communicator.hpp"/>
-    <File Name="src/language_prompts.cpp"/>
-    <File Name="src/language_prompts.hpp"/>
     <File Name="src/main.cpp"/>
     <File Name="src/menu_manager.cpp"/>
     <File Name="src/menu_manager.hpp"/>
@@ -69,9 +67,10 @@
       <File Name="src/data/config_dao.hpp"/>
       <File Name="src/data/users_dao.hpp"/>
       <File Name="src/data/users_dao.cpp"/>
-      <File Name="src/menu_dao.hpp"/>
-      <File Name="src/structures.hpp"/>
-      <File Name="src/struct_compat.hpp"/>
+      <File Name="src/data/menu_dao.hpp"/>
+      <File Name="src/data/struct_compat.hpp"/>
+      <File Name="src/data/structures.hpp"/>
+      <File Name="src/data/prompts_dao.hpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="mods">
       <File Name="src/mods/mod_base.hpp"/>
